<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PhoneBook</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_user_domain_com">Email:user@domain.com</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="add">Add</string>
    <string name="discard_changes">Discard changes</string>
    <string name="use_the_buttons_on_action_bar">Use the buttons on action bar</string>
    <string name="add_new_person">Add new Person</string>
    <string name="update_person">Update Person</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="update">Update</string>
    <string name="phone_book">PHONE BOOK</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="welcome_">Welcome!</string>
    <string name="save">Save</string>

</resources>