<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/Photo"
        android:layout_width="fill_parent"
        android:layout_height="240dp"
        android:src="@drawable/propic" />

    <ImageView
        android:id="@+id/userphoto"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/FName"
        android:alpha="0.2"
        android:src="@drawable/user" />

    <EditText
        android:id="@+id/FName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Photo"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@+id/userphoto"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/LName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/FName"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/userphoto"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName" >
    </EditText>

    <ImageView
        android:id="@+id/callphoto"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/userphoto"
        android:layout_alignTop="@+id/Phone"
        android:alpha="0.2"
        android:src="@drawable/call" />

    <EditText
        android:id="@+id/Phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LName"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/callphoto"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone" />

    <ImageView
        android:id="@+id/emailidphoto"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/callphoto"
        android:layout_alignTop="@+id/Email"
        android:alpha="0.2"
        android:src="@drawable/email" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Phone"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/emailidphoto"
        android:ems="10"
        android:hint="@string/email_user_domain_com"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailidphoto"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/use_the_buttons_on_action_bar"
        android:textSize="20sp" />

</RelativeLayout>